# ugly-duckling-firmware

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Common.cmake  DeviceCommon.cmake  README.md  cspell.json  generate-clang-compile-db.py  generate-clang-tidy-compile-db.py  sdkconfig  sdkconfig.carrot.defaults  sdkconfig.debug.defaults  sdkconfig.defaults  sdkconfig.pm_diagnostics.defaults  sdkconfig.s3.defaults  sdkconfig.spinach.defaults
.github/workflows/: build.yml
components/devices/src/: Device.hpp
components/devices/src/devices/: DeviceDefinition.hpp  DeviceSettings.hpp  GenericDevice.hpp  UglyDucklingMk10.hpp  UglyDucklingMk11.hpp  UglyDucklingMk5.hpp  UglyDucklingMk6.hpp  UglyDucklingMk7.hpp  UglyDucklingMk8.hpp  UglyDucklingMk9.hpp  UglyDucklingMk9Rev1.hpp  UglyDucklingMk9Rev2.hpp  UglyDucklingMkX.hpp
components/functions/src/functions/: Function.hpp  ScheduledTransitionLoop.hpp
components/functions/src/functions/chicken_door/: ChickenDoor.hpp
components/functions/src/functions/plot_controller/: PlotController.hpp
components/kernel/: CMakeLists.txt  idf_component.yml
components/kernel/src/: BatteryManager.hpp  Concurrent.hpp  Configuration.hpp  Console.hpp  CrashManager.hpp  DebugConsole.hpp  EspException.hpp  HardwareVersion.hpp  HttpUpdate.hpp  I2CManager.hpp  KernelStatus.hpp  Log.hpp  LogJson.hpp  MacAddress.hpp  Manager.hpp  MovingAverage.hpp  Named.hpp  NvsConfiguration.hpp  NvsStore.hpp  Overloaded.hpp  PcntManager.hpp  Pin.cpp  Pin.hpp  PowerManager.cpp  PowerManager.hpp  PulseCounter.cpp  PulseCounter.hpp  PwmManager.hpp  ShutdownManager.hpp  State.cpp  State.hpp  StateManager.hpp  Strings.hpp  Task.hpp  Telemetry.hpp  Time.hpp  Watchdog.hpp
components/kernel/src/drivers/: BatteryDriver.hpp  BleDriver.hpp  Bq27220Driver.hpp  Drv8801Driver.hpp  Drv8833Driver.hpp  Drv8848Driver.hpp  Drv8874Driver.hpp  Ina219Driver.hpp  LedDriver.hpp  MotorDriver.cpp  MotorDriver.hpp  RtcDriver.hpp  SwitchManager.hpp  WiFiDriver.hpp  WifiApRecord.hpp
components/kernel/src/mqtt/: MqttDriver.hpp  MqttLog.hpp  MqttRoot.hpp  PendingMessages.hpp
components/kernel/test/: ConfigurationTest.cpp  MovingAverageTest.cpp  Strings.test.cpp
components/kernel/ulp/: pulse_counter.c
components/peripherals-api/src/peripherals/api/: IDoor.hpp  IFlowMeter.hpp  ILightSensor.hpp  IPeripheral.hpp  ISoilMoistureSensor.hpp  ITemperatureSensor.hpp  IValve.hpp  TargetState.hpp  Units.hpp
components/peripherals/src/peripherals/: I2CSettings.hpp  Motors.cpp  Motors.hpp  Peripheral.hpp  PeripheralException.hpp
components/peripherals/src/peripherals/analog_meter/: AnalogMeter.hpp
components/peripherals/src/peripherals/door/: Door.hpp
components/peripherals/src/peripherals/environment/: BitbangI2C.hpp  ChirpSoilSensor.hpp  Ds18B20SoilSensor.hpp  Environment.hpp  Fdc1004SoilMoistureSensor.hpp  Hdc2010Sensor.hpp  Hw390SoilMoistureSensor.hpp  KalmanFilterSoilSensor.hpp  NtcTemperatureSensor.hpp  Sht2xSensor.hpp  Sht3xSensor.hpp  SpadefootToadSensor.hpp
components/peripherals/src/peripherals/fence/: ElectricFenceMonitor.hpp
components/peripherals/src/peripherals/flow_meter/: FlowMeter.hpp
components/peripherals/src/peripherals/light_sensor/: AnalogLightSensor.hpp  Bh1750.hpp  LightSensor.hpp  Tsl2591.hpp
components/peripherals/src/peripherals/multiplexer/: Xl9535.hpp
components/peripherals/src/peripherals/valve/: Valve.hpp  ValveControlStrategy.hpp  ValveFactory.hpp  ValveSettings.hpp
components/peripherals/test/: BitbangI2CTest.cpp
components/scheduling/src/scheduling/: CompositeScheduler.hpp  DelayScheduler.hpp  IScheduler.hpp  LightSensorScheduler.hpp  MoistureBasedScheduler.hpp  MoistureKalmanFilter.hpp  OverrideScheduler.hpp  TimeBasedScheduler.hpp
components/scheduling/test/scheduling/: DelaySchedulerTest.cpp  Fakes.hpp  LightSensorSchedulerTest.cpp  MoistureBasedSchedulerTest.cpp  MoistureKalmanFilterTest.cpp  TestHelpers.hpp  TimeBasedSchedulerTest.cpp
components/utils/src/utils/: Chrono.hpp  DebouncedMeasurement.hpp
config-templates/: plot-controller-mk10-spadefoot-toad.json  plot-controller-mk10.json  plot-controller-mk11-spadefoot-toad.json  plot-controller-mk11.json  plot-controller-mk7-fully-equipped.json  plot-controller-mk9-chirp.json  plot-controller-mk9-fully-equipped.json  plot-controller-mk9-hw390.json  plot-controller-mk9-legacy.json  plot-controller-mk9-spadefoot-toad.json  plot-controller-mk9.json  plot-controller-wokwi.json
docs/: Architecture.md  Chirp-sensor.md  CodingStandards.md  MAC-Based-Device-Selection.md  ULP-PulseCounter.md
docs/specs/: Bluetooth.md  Chirp-sensor.md  Hardware-Version-in-eFuse.md  I2C-buses-for-Carrot.md  MAC-Based-Device-Selection.md  Spadefoot-Toad-calibration-commands.md  Spadefoot-Toad-sensor.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
test/embedded-tests/: CMakeLists.txt  sdkconfig.defaults
test/embedded-tests/components/kernel-test/: idf_component.yml
test/embedded-tests/components/kernel-test/src/: WatchdogTest.cpp
test/unit-tests/: CMakeLists.txt
tools/: activate_idf.sh  clang-tidy-compat.h  efuse_burn.py
tools/kalman/: CMakeLists.txt  main.cpp
tools/test/: test_efuse_burn.py
wokwi/: .gitignore  README.md  diagram.flow-control-mk10.json  diagram.flow-control-mk8.json  wokwi.toml
wokwi/chips/: bq27220.chip.c  bq27220.chip.json  ina219.chip.c  ina219.chip.json
